--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,14 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
-        </dependency>         
+        </dependency> 
+        
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
+        </dependency>        
     </dependencies>
 
   <build>
